# IstakaUstasi

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  release-please-config.json  render.yaml
.github/: dependabot.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: handlers.py
backend/app/db/: __init__.py  base.py  factory.py  supabase.py
backend/app/dependencies/: auth.py  image_validation.py
backend/app/models/: auth.py  solver.py  vision.py
backend/app/routers/: __init__.py  auth.py  solver.py  vision.py
backend/app/services/: encryption.py  job_service.py  log_service.py  user_service.py
backend/app/utils/: i18n.py
backend/core/: exceptions.py  handlers.py
backend/db/: __init__.py  base.py  factory.py  supabase.py
backend/dependencies/: auth.py
backend/models/: solver.py  vision.py
backend/routers/: __init__.py  auth.py  solver.py  vision.py
backend/services/: log_service.py  supabase_service.py  user_service.py
backend/src/core/: handlers.py
backend/src/db/: __init__.py  base.py  factory.py  supabase.py
backend/src/dependencies/: auth.py
backend/src/models/: solver.py
backend/src/routers/: auth.py  solver.py  vision.py
backend/src/services/: log_service.py  user_service.py
backend/tests/: test_auth_key_endpoints.py  test_image_validation.py  test_solver_router.py  test_vision_router.py
(+43 files in other folders)
